--- a/openerp/files/default/nginx/h5bp/location/expires.conf
+++ b/openerp/files/default/nginx/h5bp/location/expires.conf
@@ -8,42 +8,16 @@
 # future (if the default expire rule is 1 month). Therefore, do not use a
 # default expire rule with nginx unless your site is completely static
 
-# cache.appcache, your document html and data
-location ~* \.(?:manifest|appcache|html?|xml|json)$ {
-  expires -1;
-  access_log logs/static.log;
-}
+location ~* (/web/static/|/website/static/) {
+                proxy_cache_valid 200 60m;
+                proxy_buffering on;
+                proxy_pass http://127.0.0.1:8069;
+                access_log off;
+                expires 1M;
+                add_header Cache-Control "public";
+		proxy_cache my_zone;
+		  proxy_cache_bypass  $http_cache_control;
+		  add_header X-Proxy-Cache $upstream_cache_status;
 
-# Feed
-location ~* \.(?:rss|atom)$ {
-  expires 1h;
-  add_header Cache-Control "public";
-}
+        }
 
-# Media: images, icons, video, audio, HTC
-location ~* \.(?:jpg|jpeg|gif|png|ico|cur|gz|svg|svgz|mp4|ogg|ogv|webm|htc)$ {
-  expires 1M;
-  access_log off;
-  add_header Cache-Control "public";
-  proxy_cache my_zone;
-  proxy_cache_bypass  $http_cache_control;
-  add_header X-Proxy-Cache $upstream_cache_status;
-}
-
-# CSS and Javascript
-location ~* \.(?:css|js)$ {
-  expires 1M;
-  access_log off;
-  add_header Cache-Control "public";
-  proxy_cache my_zone;
-  proxy_cache_bypass  $http_cache_control;
-  add_header X-Proxy-Cache $upstream_cache_status;
-}
-
-# WebFonts
-# If you are NOT using cross-domain-fonts.conf, uncomment the following directive
-# location ~* \.(?:ttf|ttc|otf|eot|woff|woff2)$ {
-#  expires 1M;
-#  access_log off;
-#  add_header Cache-Control "public";
-# }
