Fix for the endless redirect loop when we access sass.sl

--- a/openerp/files/default/nginx/h5bp/location/expires.conf
+++ b/openerp/files/default/nginx/h5bp/location/expires.conf
@@ -9,9 +9,9 @@
 # default expire rule with nginx unless your site is completely static
 
 location ~* (/web/static/|/website/static/) {
-                proxy_cache_valid 200 60m;
+                proxy_cache_valid 200 1440m;
                 proxy_buffering on;
-                proxy_pass http://127.0.0.1:8069;
+                proxy_pass https://127.0.0.1:8069;
                 access_log off;
                 expires 1M;
                 add_header Cache-Control "public";
